--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     dkbjh fihj</title></head>
 <body>
     <p>
-    vhubr jr seojfb soijefn fbd oirg h flk drpgn ;prkong </p></body>
+    vhubr jr seojfb soijefn fbd oirg h flk drpgn  </p></body>
 
 
 
